[FIX] account_reports: fixed layout issue where the history button would conflict with the 'mode' buttons if the contact information block wasn't long enough

--- a/account_reports/static/src/less/account_financial_report.less
+++ b/account_reports/static/src/less/account_financial_report.less
@@ -38,6 +38,9 @@
             margin-bottom: 128px;
         }
     }
+    p.o_account_reports_contact_info {
+        min-height: 30px;
+    }
     .o_form_input {
         width: 70%;
     }
